--- a/src/components/pages/profile.module.css
+++ b/src/components/pages/profile.module.css
@@ -1,10 +1,26 @@
 body{
     color : white;
+    
 }
 .grid{
     display: grid;
     grid-template-columns: 30% 70%;
     height : 90vh;
+}
+
+h1{
+    font-weight: 900;
+    color : rgb(135, 235, 255);
+
+}
+
+h2{
+    font-style: italic;
+    color: aquamarine;
+}
+h3{
+    font-style: italic;
+    color: rgb(148, 245, 212);
 }
 
 .details{
