--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -6,10 +6,11 @@ body{
     margin : 0;
 }
 .nav{
-    background-color: #333;
+    background-color: rgb(24, 24, 24);
     color : white;
     display : flex;
     justify-content: space-between;
+    border-bottom: 2px solid aqua;
 }
 
 .site-title{
