--- a/src/components/pages/viewprofile.module.css
+++ b/src/components/pages/viewprofile.module.css
@@ -1,10 +1,11 @@
-
+body{
+    color : white;
+    
+}
 .grid{
-    box-sizing: border-box;
     display: grid;
     grid-template-columns: 30% 70%;
-    height: 80%;
-
+    height : 90vh;
 }
 
 h1{
@@ -53,7 +54,6 @@ h3{
 }
 
 .description{
-    box-sizing: border-box;
     height: 120px;
     line-height: 1.8rem;
     letter-spacing: 2px;
@@ -68,4 +68,25 @@ h3{
 .in{
     display: flex;
     justify-content: center;
+}
+
+.addcomment{
+    margin-bottom: auto;
+    margin-left: 7px;
+    background-color: greenyellow;
+    display: flex;
+    align-items: center;
+    width : 150px;
+    height: 50px;
+    border-radius: 30px;
+    justify-content: center;
+}
+
+.addcomment:hover{
+    background-color: rgb(198, 254, 113);
+}
+
+.ci{
+    margin-left: 5px;
+    width: fit-content;
 }
