--- a/src/components/ui/Modal.module.css
+++ b/src/components/ui/Modal.module.css
@@ -16,12 +16,19 @@ body.active-modal {
     background: rgba(49,49,49,0.8);
 }
 .content {
-    position: absolute;
+    width: 70%;
+    height : 20%;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
     line-height: 1.4;
-    background: #f1f1f1;
+    background: #111010;
+    border: 2px solid greenyellow;
     padding: 14px 28px;
     border-radius: 3px;
     max-width: 600px;
@@ -29,8 +36,9 @@ body.active-modal {
 }
 
 .close{
-    position: absolute;
-    top: 10px;
-    right: 10px;
+    position: fixed;
+    width : 100px;
+    bottom: 10%;
+    right: 40%;
     padding: 5px 7px;
 }
