--- a/src/components/pages/profile/profile.module.css
+++ b/src/components/pages/profile/profile.module.css
@@ -1,11 +1,10 @@
-body{
-    color : white;
-    
-}
+
 .grid{
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: 40% 60%;
-    height : 90vh;
+    height: 80%;
+
 }
 
 h1{
@@ -31,7 +30,9 @@ h3{
     padding: 5px;
 }
 
-.img{
+img{
+    max-width: 150px;
+    border-radius: 100%;
     flex : 20%;
 }
 
@@ -54,6 +55,7 @@ h3{
 }
 
 .description{
+    box-sizing: border-box;
     height: 120px;
     line-height: 1.8rem;
     letter-spacing: 2px;
@@ -70,26 +72,6 @@ h3{
     justify-content: center;
 }
 
-.addcomment{
-    margin-bottom: auto;
-    margin-left: 7px;
-    background-color: greenyellow;
-    display: flex;
-    align-items: center;
-    width : 150px;
-    height: 50px;
-    border-radius: 30px;
-    justify-content: center;
-}
-
-.addcomment:hover{
-    background-color: rgb(198, 254, 113);
-}
-
-.ci{
-    margin-left: 5px;
-    width: fit-content;
-}
 .year{
     color :palegoldenrod;
 }
